src/examples/test-doubles/ReturnSelfExampleTest.php.out
./tools/phpunit tests/ReturnSelfExampleTest.php
PHPUnit 10.2.0 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.2.9

E                                                                   1 / 1 (100%)

Time: 00:00.001, Memory: 14.41 MB

There was 1 error:

1) ReturnSelfExampleTest::testReturnSelf
PHPUnit\Framework\MockObject\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ReturnSelfExampleTest.php:9

--

There was 1 risky test:

1) ReturnSelfExampleTest::testReturnSelf
This test did not perform any assertions

/path/to/tests/ReturnSelfExampleTest.php:6

ERRORS!
Tests: 1, Assertions: 0, Errors: 1, Risky: 1.
